# spam-filter

./: README.md  main.ipynb  pyproject.toml
data/: spam_clean.csv  spam_test.csv  spam_train.csv
