[tool.poetry]
name = "spam-filter"
version = "0.1.0"
description = ""
authors = ["Sarah Melo <sarah.melo@jusbrasil.com.br>"]
readme = "README.md"
packages = [{include = "spam_filter"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
scikit-learn = "^1.6.1"
matplotlib = "^3.10.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
